# handcraftMIDI

./: CMakeCache.txt  CMakeLists.txt  Makefile  MidiInTest.cpp  MidiOutTest.cpp  MidiPortTest.cpp  README.MD  TODO.MD  cmake_install.cmake  handmarker  handmarker.cpp  signal_producing.cpp
